--- a/programs/.gitignore
+++ b/programs/.gitignore
@@ -26,9 +26,7 @@ pkey/rsa_sign_pss
 pkey/rsa_verify
 pkey/rsa_verify_pss
 pkey/tts_genkey
-pkey/tts_gencrt
-pkey/tts_priv.der
-pkey/tts_pub.der
+pkey/rb_genkey
 random/gen_entropy
 random/gen_random_ctr_drbg
 random/gen_random_havege
